--- a/css/clases.css
+++ b/css/clases.css
@@ -132,7 +132,7 @@
 }
 
 /*        Card - Prototipo de tarjeta */
-.card { /* Modificar metodología BEM */
+.card {
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -219,6 +219,7 @@
 
 .contenedorApuntes li {
   padding: .5rem;
+  list-style-type: square;
 }
 
 .contenedorApuntes { 
@@ -287,7 +288,8 @@
 }
 
 
-/***********************************************/
+/* MEDIA Q ______________________________*/
+
 @media screen and (max-width: 1280px){ 
   .contenedorApuntes { width: 70%;}
 }
@@ -307,5 +309,4 @@
     padding-left: .2rem;
   }
 }
-
 /* ______________________________________ */
