--- a/css/clases.css
+++ b/css/clases.css
@@ -320,8 +320,7 @@
   .tituloTema { 
     border: none;
     padding-left: .1rem;
-    background-color: darkseagreen;
   }
-}
+} /* ESTUDIAR VW Y CALC - MENOS DIVISIONES MEDIAQ*/
 
 /* ______________________________________ */
