--- a/css/clases.css
+++ b/css/clases.css
@@ -19,7 +19,7 @@
   --fusciaIlumina: #E91E63;
   --azulPapuntesIlumina: #00BCD4;
   /**/
-  --azulPrincipal: rgb(1, 87, 155);
+  --azulPrincipal: #01579b;
   --blancoTipologia: #FDFEFE;
   /* naranja -> darkorange */
   --azulPapuntes: #3498db;
