--- a/css/clases.css
+++ b/css/clases.css
@@ -158,30 +158,36 @@
 .temaIndice {
   width: 80%;
   margin-bottom: 2rem;
-}
-.temaIndice span {
-  padding: 1rem;
-  font-weight: bold;
-  background-color: var(--azulPapuntes);
+
+  & span {
+    padding: 1rem;
+    font-weight: bold;
+    background-color: var(--azulPapuntes);
+  }
+  
+  & ul {
+    border: 5px dashed rgba(255, 255, 255, 0.1);
+  
+    & li {
+      border-bottom: 5px dashed rgba(255, 255, 255, 0.1);
+
+      & a {
+        display: block;
+        padding: 1rem 2rem;
+      }
+
+    }
+
+    & li:last-child {
+      border: none;
+    }
+    
+    & li:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
 }
 
-.temaIndice ul {
-  border: 5px dashed rgba(255, 255, 255, 0.1);
-}
-.temaIndice ul li {
-  border-bottom: 5px dashed rgba(255, 255, 255, 0.1);
-}
-
-  .temaIndice ul li:last-child {
-    border: none;
-  }
-  .temaIndice ul li:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  .temaIndice ul li a {
-    display: block;
-    padding: 1rem 2rem;
-  }
 /* ______________________________________ */
 
 /* CLASES VISTA APUNTES __________________*/
@@ -238,37 +244,46 @@
     margin: 1rem auto; 
     padding: .5rem;
     background-color: var(--azulClaro);
+
+    & li {
+      padding: .5rem;
+      list-style-type: square;
+      list-style-position: inside;
+    }
+
+    & li::marker {
+      color: var(--rojonaranjaIlumina);
+    }
   }
-  .contenedorApuntes li {
-    padding: .5rem;
-    list-style-type: square;
-    list-style-position: inside;
-  }
+  
   /* ____ TABLAS ____*/
   .contenedorApuntes table { 
     margin: 5rem auto;
     border-collapse: collapse;
     background-color: var(--azulClaro);
-  }
-  .contenedorApuntes caption {
-    padding: .5rem;  
-    color: var(--azulDetalles);
-    font-weight: bold;
-    text-align: left;
-    background-color: var(--azulClaro);
-  }
-    .contenedorApuntes th {
+
+    & caption {
+      padding: .5rem;  
+      color: var(--azulDetalles);
+      font-weight: bold;
+      text-align: left;
+      background-color: var(--azulClaro);
+    }
+
+    & th {
       color: var(--azulClaro);
       padding: .3rem 1.2rem;
       background-color: var(--azulDetalles);
       border: 2px dashed var(--azulPapuntes);
     }
-    .contenedorApuntes td {
+
+    & td {
       padding: .5rem;
       color: var(--azulDetalles);
       background-color: var(--azulClaro);
       border: 2px dashed var(--azulPapuntes);
     }
+  }
   /*_________________*/  
   /* MENÚ NAVEGACIÓN */  
   .menuOpcional {
