--- a/devA/javaScript/apuntesJavascript/jScript.css
+++ b/devA/javaScript/apuntesJavascript/jScript.css
@@ -4,6 +4,7 @@
     text-decoration: none;
 }
 
+
 header {
     display: flex;
     padding: 2rem;
@@ -16,28 +17,49 @@ header {
     }
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.botonVolver {
+    display: inline-block;
+    margin: 1rem 0;
+    padding: .1rem 1.5rem;
+    
+    background-color: #4A235A;
+
+    & a {color: orange;}
+}
+
+/* >>> Indice <<<*/
+.contenedorIndice {
+    width: 80%;
+    margin: 1rem auto;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem 2rem;
+    justify-content: space-evenly;
+
+    & ul {
+        width: 45%;
+        min-width: 300px;
+        padding: 0;
+    }
+    & ul li{
+        padding: .4rem 0;
+        list-style-type: none;
+    }
+    & ul li:hover{
+        background-color: #F4ECF7;
+        font-weight: bold;
+    }
+}
+/*****************/
 .contenedor {
     margin: 0 2rem 2rem;
     font-family: 'Montserrat', sans-serif;
-}
-
-.indice {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-    justify-content: center;
-    width: 80%;
-    margin: 3rem auto;
-    padding: 1rem;
-    border: 5px solid #4A235A;
-    background-color: #F4ECF7;
-    font-weight: bold;
-    & li {
-        padding: .2rem .8rem;
-        list-style-position: outside;
-    }
-
-    & li a { color: black;}
 }
 
 p, h2, h3, h4 {
