--- a/css/clases.css
+++ b/css/clases.css
@@ -48,7 +48,7 @@
 /* CONTENEDOR PRINCIPAL _________________________*/
 .main--Principal { 
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
